# tritium

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test_binaries.yml
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/tritium/: Engine.hpp  MessageType.hpp  Window.hpp  api.hpp  uid.hpp
engine/include/tritium/layer/: EmptyLayer.hpp  EngineGpuLayer.hpp  EngineGuiLayer.hpp  EngineToolLayer.hpp  Layer.hpp  RuntimeLayer.hpp
engine/src/: Engine.cpp  Window.cpp
engine/src/layer/: EmptyLayer.cpp  EngineGuiLayer.cpp  EngineToolLayer.cpp  RuntimeLayer.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
